industry block added

--- a/src/index.html
+++ b/src/index.html
@@ -73,13 +73,13 @@
       <section class="industries">
         <h2 class="industries__head">Отрасли</h2>
         <ul class="industries__list">
-          <li class="industries__item">Медицина</li>
-          <li class="industries__item">Фармацевтика</li>
-          <li class="industries__item">Криминалистика</li>
-          <li class="industries__item">Агро</li>
-          <li class="industries__item">Материаловедение</li>
-          <li class="industries__item">
-            <div class="industries__dropdown" id="industries__science">
+          <li class="industries__item" id="medicineBtn">Медицина</li>
+          <li class="industries__item" id="pharmaBtn">Фармацевтика</li>
+          <li class="industries__item" id="criminalBtn">Криминалистика</li>
+          <li class="industries__item" id ="agroBtn">Агро</li>
+          <li class="industries__item" id="materialsBtn">Материаловедение</li>
+          <li class="industries__item" id="scienceBtn">
+            <div class="industries__dropdown" id="industries__button">
               Наука
             </div>
             <p class="industries__dropdown-text">
@@ -89,10 +89,75 @@
               внедрение современных методологических подходов.
             </p>
           </li>
-          <li class="industries__item">Пищевая промышленность</li>
-          <li class="industries__item">Экология</li>
-          <li class="industries__item">Энергетика</li>
+          <li class="industries__item" id="foodBtn">Пищевая промышленность</li>
+          <li class="industries__item" id="ecoBtn">Экология</li>
+          <li class="industries__item" id="energyBtn">Энергетика</li>
         </ul>
+        <div class="industries__content">
+          <div class="industries__card" id="medicine">
+            <h3 class="industries__card-header">Медицина</h3>
+            <p class="industries__card-text">
+              Lorem ipsum dolor sit amet.
+            </p>
+            <img class="industries__card-arrow" src="./images/Icons/Form_arrow.svg">
+          </div>
+          <div class="industries__card" id="pharma">
+            <h3 class="industries__card-header">Фармацевтика</h3>
+            <p class="industries__card-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, debitis?
+            </p>
+            <img class="industries__card-arrow" src="./images/Icons/Form_arrow.svg">
+          </div>
+          <div class="industries__card" id="criminal">
+            <h3 class="industries__card-header">Криминалистика</h3>
+            <p class="industries__card-text">
+              Предлагаем лучшие в своем классе решения для прикладных и научных исследований в направлении химического анализа и молекулярной биологии: профессиональное оборудование, расходные материалы и внедрение современных методологических подходов.
+            </p>
+            <img class="industries__card-arrow" src="./images/Icons/Form_arrow.svg">
+          </div>
+          <div class="industries__card" id ="agro">
+            <h3 class="industries__card-header">Агро</h3>
+            <p class="industries__card-text">
+              Предлагаем лучшие в своем классе решения для прикладных и научных исследований в направлении химического анализа и молекулярной биологии: профессиональное оборудование, расходные материалы и внедрение современных методологических подходов.
+            </p>
+            <img class="industries__card-arrow" src="./images/Icons/Form_arrow.svg">
+          </div>
+          <div class="industries__card" id="materials">
+            <h3 class="industries__card-header">Материаловедение</h3>
+            <p class="industries__card-text">
+              Предлагаем лучшие в своем классе решения для прикладных и научных исследований в направлении химического анализа и молекулярной биологии: профессиональное оборудование, расходные материалы и внедрение современных методологических подходов.
+            </p>
+            <img class="industries__card-arrow" src="./images/Icons/Form_arrow.svg">
+          </div>
+          <div class="industries__card active" id="science">
+            <h3 class="industries__card-header">Наука</h3>
+            <p class="industries__card-text">
+              Предлагаем лучшие в своем классе решения для прикладных и научных исследований в направлении химического анализа и молекулярной биологии: профессиональное оборудование, расходные материалы и внедрение современных методологических подходов.
+            </p>
+            <img class="industries__card-arrow" src="./images/Icons/Form_arrow.svg">
+          </div>
+          <div class="industries__card" id="food">
+            <h3 class="industries__card-header">Пищевая промышленность</h3>
+            <p class="industries__card-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa officiis sint ipsum.
+            </p>
+            <img class="industries__card-arrow" src="./images/Icons/Form_arrow.svg">
+          </div>
+          <div class="industries__card" id="eco">
+            <h3 class="industries__card-header">Экология</h3>
+            <p class="industries__card-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam animi totam dicta velit esse?
+            </p>
+            <img class="industries__card-arrow" src="./images/Icons/Form_arrow.svg">
+          </div>
+          <div class="industries__card" id="energy">
+            <h3 class="industries__card-header">Энергетика</h3>
+            <p class="industries__card-text">
+              Предлагаем лучшие в своем классе решения для прикладных и научных исследований в направлении химического анализа и молекулярной биологии: профессиональное оборудование, расходные материалы и внедрение современных методологических подходов.
+            </p>
+            <img class="industries__card-arrow" src="./images/Icons/Form_arrow.svg">
+          </div>
+        </div>
       </section>
       <section class="news">
         <h2 class="news__header">Новости и вебинары</h2>
