--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
           <li class="industries__item" id="medicineBtn">Медицина</li>
           <li class="industries__item" id="pharmaBtn">Фармацевтика</li>
           <li class="industries__item" id="criminalBtn">Криминалистика</li>
-          <li class="industries__item" id ="agroBtn">Агро</li>
+          <li class="industries__item" id="agroBtn">Агро</li>
           <li class="industries__item" id="materialsBtn">Материаловедение</li>
           <li class="industries__item" id="scienceBtn">
             <div class="industries__dropdown" id="industries__button">
@@ -97,71 +97,154 @@
           <div class="industries__card" id="medicine">
             <h3 class="industries__card-header">Медицина</h3>
             <p class="industries__card-text">
-              Lorem ipsum dolor sit amet.
+              Многопрофильная клиника доказательной медицины, которая
+              предоставляет современную высокоспециализированную медицинскую
+              помощь взрослым и детям. Наше главное кредо - "разумная
+              медицинская помощь".
             </p>
-            <img class="industries__card-arrow" src="./images/Icons/Form_arrow.svg">
+            <img
+              class="industries__card-arrow"
+              src="./images/Icons/Form_arrow.svg"
+            />
           </div>
           <div class="industries__card" id="pharma">
             <h3 class="industries__card-header">Фармацевтика</h3>
             <p class="industries__card-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, debitis?
+              Фармацевтическая промышленность требует особой тщательности,
+              точности и качества в каждом аспекте, связанным с производством и
+              продажей лекарственных препаратов, начиная от строгих требований в
+              отношении сырья, и заканчивая условиями хранения готовых
+              лекарственных препаратов и пищевых добавок, попадающих к пациентам
+              с аптечных полок.
             </p>
-            <img class="industries__card-arrow" src="./images/Icons/Form_arrow.svg">
+            <img
+              class="industries__card-arrow"
+              src="./images/Icons/Form_arrow.svg"
+            />
           </div>
           <div class="industries__card" id="criminal">
             <h3 class="industries__card-header">Криминалистика</h3>
             <p class="industries__card-text">
-              Предлагаем лучшие в своем классе решения для прикладных и научных исследований в направлении химического анализа и молекулярной биологии: профессиональное оборудование, расходные материалы и внедрение современных методологических подходов.
+              Криминалистика — это наука, которая изучает и обобщает опыт борьбы
+              с преступностью, разрабатывает средства, приемы и методы раскрытия
+              и расследования преступлений.
             </p>
-            <img class="industries__card-arrow" src="./images/Icons/Form_arrow.svg">
+            <img
+              class="industries__card-arrow"
+              src="./images/Icons/Form_arrow.svg"
+            />
           </div>
-          <div class="industries__card" id ="agro">
+          <div class="industries__card" id="agro">
             <h3 class="industries__card-header">Агро</h3>
             <p class="industries__card-text">
-              Предлагаем лучшие в своем классе решения для прикладных и научных исследований в направлении химического анализа и молекулярной биологии: профессиональное оборудование, расходные материалы и внедрение современных методологических подходов.
+              Агро — префікс слів, що мають стосунок до сільського господарства.
             </p>
-            <img class="industries__card-arrow" src="./images/Icons/Form_arrow.svg">
+            <img
+              class="industries__card-arrow"
+              src="./images/Icons/Form_arrow.svg"
+            />
           </div>
           <div class="industries__card" id="materials">
             <h3 class="industries__card-header">Материаловедение</h3>
             <p class="industries__card-text">
-              Предлагаем лучшие в своем классе решения для прикладных и научных исследований в направлении химического анализа и молекулярной биологии: профессиональное оборудование, расходные материалы и внедрение современных методологических подходов.
+              Материаловедение — междисциплинарный раздел науки, изучающий
+              изменения свойств материалов как в твёрдом, так и в жидком
+              состоянии в зависимости от некоторых факторов.
             </p>
-            <img class="industries__card-arrow" src="./images/Icons/Form_arrow.svg">
+            <img
+              class="industries__card-arrow"
+              src="./images/Icons/Form_arrow.svg"
+            />
           </div>
           <div class="industries__card active" id="science">
             <h3 class="industries__card-header">Наука</h3>
             <p class="industries__card-text">
-              Предлагаем лучшие в своем классе решения для прикладных и научных исследований в направлении химического анализа и молекулярной биологии: профессиональное оборудование, расходные материалы и внедрение современных методологических подходов.
+              Предлагаем лучшие в своем классе решения для прикладных и научных
+              исследований в направлении химического анализа и молекулярной
+              биологии: профессиональное оборудование, расходные материалы и
+              внедрение современных методологических подходов.
             </p>
-            <img class="industries__card-arrow" src="./images/Icons/Form_arrow.svg">
+            <img
+              class="industries__card-arrow"
+              src="./images/Icons/Form_arrow.svg"
+            />
           </div>
           <div class="industries__card" id="food">
             <h3 class="industries__card-header">Пищевая промышленность</h3>
             <p class="industries__card-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa officiis sint ipsum.
+              Пищева́я промы́шленность — группа промышленных отраслей,
+              производящих пищевые продукты в готовом виде или в виде
+              полуфабрикатов, а также напитки, табачные изделия, в некоторых
+              классификациях — также мыло и моющие средства (на жировых
+              производствах).
             </p>
-            <img class="industries__card-arrow" src="./images/Icons/Form_arrow.svg">
+            <img
+              class="industries__card-arrow"
+              src="./images/Icons/Form_arrow.svg"
+            />
           </div>
           <div class="industries__card" id="eco">
             <h3 class="industries__card-header">Экология</h3>
             <p class="industries__card-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam animi totam dicta velit esse?
+              Эколо́гия — естественная наука о взаимодействиях живых организмов
+              между собой и с их средой обитания, об организации и
+              функционировании биосис­тем различных уров­ней.
             </p>
-            <img class="industries__card-arrow" src="./images/Icons/Form_arrow.svg">
+            <img
+              class="industries__card-arrow"
+              src="./images/Icons/Form_arrow.svg"
+            />
           </div>
           <div class="industries__card" id="energy">
             <h3 class="industries__card-header">Энергетика</h3>
             <p class="industries__card-text">
-              Предлагаем лучшие в своем классе решения для прикладных и научных исследований в направлении химического анализа и молекулярной биологии: профессиональное оборудование, расходные материалы и внедрение современных методологических подходов.
+              Энерге́тика — область хозяйственно-экономической деятельности
+              человека, совокупность больших естественных и искусственных
+              подсистем, служащих для преобразования, распределения и
+              использования энергетических ресурсов всех видов.
             </p>
-            <img class="industries__card-arrow" src="./images/Icons/Form_arrow.svg">
+            <img
+              class="industries__card-arrow"
+              src="./images/Icons/Form_arrow.svg"
+            />
           </div>
         </div>
       </section>
       <section class="news">
         <h2 class="news__header">Новости и вебинары</h2>
         <div class="news__slider"></div>
+      </section>
+      <section class="form">
+        <div class="form__container">
+          <div class="form__close">
+            <img class="form__close-img" src="./images/Icons/Cross.svg" />
+          </div>
+          <h4 class="form__head">Become a partner</h4>
+          <form class="form__form" action="#">
+            <input
+              class="form__name"
+              type="text"
+              name="name"
+              placeholder="Full name"
+              required
+            />
+            <input
+              class="form__tel"
+              type="tel"
+              id="phone"
+              name="phone"
+              pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+              placeholder="Format: 000 123 44 55"
+              required
+            />
+            <textarea
+              class="form__textarea"
+              placeholder="Message"
+              name="message"
+            ></textarea>
+            <button class="form__button">Send</button>
+          </form>
+        </div>
       </section>
     </main>
     <script defer type="module" src="index.js"></script>
