--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,7 @@
               медицинская помощь".
             </p>
             <img
-              class="industries__card-arrow"
+              class="industries__card-arrow formOpener"
               src="./images/Icons/Form_arrow.svg"
             />
           </div>
@@ -118,7 +118,7 @@
               с аптечных полок.
             </p>
             <img
-              class="industries__card-arrow"
+              class="industries__card-arrow formOpener"
               src="./images/Icons/Form_arrow.svg"
             />
           </div>
@@ -130,7 +130,7 @@
               и расследования преступлений.
             </p>
             <img
-              class="industries__card-arrow"
+              class="industries__card-arrow formOpener"
               src="./images/Icons/Form_arrow.svg"
             />
           </div>
@@ -140,7 +140,7 @@
               Агро — префікс слів, що мають стосунок до сільського господарства.
             </p>
             <img
-              class="industries__card-arrow"
+              class="industries__card-arrow formOpener"
               src="./images/Icons/Form_arrow.svg"
             />
           </div>
@@ -152,7 +152,7 @@
               состоянии в зависимости от некоторых факторов.
             </p>
             <img
-              class="industries__card-arrow"
+              class="industries__card-arrow formOpener"
               src="./images/Icons/Form_arrow.svg"
             />
           </div>
@@ -165,7 +165,7 @@
               внедрение современных методологических подходов.
             </p>
             <img
-              class="industries__card-arrow"
+              class="industries__card-arrow formOpener"
               src="./images/Icons/Form_arrow.svg"
             />
           </div>
@@ -179,7 +179,7 @@
               производствах).
             </p>
             <img
-              class="industries__card-arrow"
+              class="industries__card-arrow formOpener"
               src="./images/Icons/Form_arrow.svg"
             />
           </div>
@@ -191,7 +191,7 @@
               функционировании биосис­тем различных уров­ней.
             </p>
             <img
-              class="industries__card-arrow"
+              class="industries__card-arrow formOpener"
               src="./images/Icons/Form_arrow.svg"
             />
           </div>
@@ -204,7 +204,7 @@
               использования энергетических ресурсов всех видов.
             </p>
             <img
-              class="industries__card-arrow"
+              class="industries__card-arrow formOpener"
               src="./images/Icons/Form_arrow.svg"
             />
           </div>
@@ -212,7 +212,166 @@
       </section>
       <section class="news">
         <h2 class="news__header">Новости и вебинары</h2>
-        <div class="news__slider"></div>
+        <div class="news__slider">
+          <div class="news__card-news">
+            <h4 class="news__card-news-head">Новость</h4>
+            <p class="news__card-news-name">Инна Новак</p>
+            <p class="news__card-news-date">17.02.2021</p>
+            <p class="news__card-news-text">
+              Исследования динамической молекулярной визуализации
+              для структурной биологии от Leica Microsystems»
+            </p>
+            <img class="news__card-news-form formOpener" src="./images/Icons/Form_arrow.svg">
+          </div>
+
+          <div class="news__card-web">
+            <h4 class="news__card-web-head">Вебинар</h4>
+            <p class="news__card-web-date">17.02.2021</p>
+            <p class="news__card-web-text">
+              Исследования динамической молекулярной визуализации
+              для структурной биологии от Leica Microsystems»
+            </p>
+            <img class="news__card-web-form formOpener" src="./images/Icons/Form_arrow.svg">
+          </div>
+
+          <div class="news__card-news">
+            <h4 class="news__card-news-head">Новость</h4>
+            <p class="news__card-news-name">Инна Новак</p>
+            <p class="news__card-news-date">17.02.2021</p>
+            <p class="news__card-news-text">
+              Исследования динамической молекулярной визуализации
+              для структурной биологии от Leica Microsystems»
+            </p>
+            <img class="news__card-news-form formOpener" src="./images/Icons/Form_arrow.svg">
+          </div>
+
+          <div class="news__card-web">
+            <h4 class="news__card-web-head">Вебинар</h4>
+            <p class="news__card-web-date">17.02.2021</p>
+            <p class="news__card-web-text">
+              Исследования динамической молекулярной визуализации
+              для структурной биологии от Leica Microsystems»
+            </p>
+            <img class="news__card-web-form formOpener" src="./images/Icons/Form_arrow.svg">
+          </div>
+
+          <div class="news__card-news">
+            <h4 class="news__card-news-head">Новость</h4>
+            <p class="news__card-news-name">Инна Новак</p>
+            <p class="news__card-news-date">17.02.2021</p>
+            <p class="news__card-news-text">
+              Исследования динамической молекулярной визуализации
+              для структурной биологии от Leica Microsystems»
+            </p>
+            <img class="news__card-news-form formOpener" src="./images/Icons/Form_arrow.svg">
+          </div>
+
+          <div class="news__card-web">
+            <h4 class="news__card-web-head">Вебинар</h4>
+            <p class="news__card-web-date">17.02.2021</p>
+            <p class="news__card-web-text">
+              Исследования динамической молекулярной визуализации
+              для структурной биологии от Leica Microsystems»
+            </p>
+            <img class="news__card-web-form formOpener" src="./images/Icons/Form_arrow.svg">
+          </div>
+
+          <div class="news__card-news">
+            <h4 class="news__card-news-head">Новость</h4>
+            <p class="news__card-news-name">Инна Новак</p>
+            <p class="news__card-news-date">17.02.2021</p>
+            <p class="news__card-news-text">
+              Исследования динамической молекулярной визуализации
+              для структурной биологии от Leica Microsystems»
+            </p>
+            <img class="news__card-news-form formOpener" src="./images/Icons/Form_arrow.svg">
+          </div>
+
+          <div class="news__card-web">
+            <h4 class="news__card-web-head">Вебинар</h4>
+            <p class="news__card-web-date">17.02.2021</p>
+            <p class="news__card-web-text">
+              Исследования динамической молекулярной визуализации
+              для структурной биологии от Leica Microsystems»
+            </p>
+            <img class="news__card-web-form formOpener" src="./images/Icons/Form_arrow.svg">
+          </div>
+
+          <div class="news__card-news">
+            <h4 class="news__card-news-head">Новость</h4>
+            <p class="news__card-news-name">Инна Новак</p>
+            <p class="news__card-news-date">17.02.2021</p>
+            <p class="news__card-news-text">
+              Исследования динамической молекулярной визуализации
+              для структурной биологии от Leica Microsystems»
+            </p>
+            <img class="news__card-news-form formOpener" src="./images/Icons/Form_arrow.svg">
+          </div>
+
+          <div class="news__card-web">
+            <h4 class="news__card-web-head">Вебинар</h4>
+            <p class="news__card-web-date">17.02.2021</p>
+            <p class="news__card-web-text">
+              Исследования динамической молекулярной визуализации
+              для структурной биологии от Leica Microsystems»
+            </p>
+            <img class="news__card-web-form formOpener" src="./images/Icons/Form_arrow.svg">
+          </div>
+
+          <div class="news__card-news">
+            <h4 class="news__card-news-head">Новость</h4>
+            <p class="news__card-news-name">Инна Новак</p>
+            <p class="news__card-news-date">17.02.2021</p>
+            <p class="news__card-news-text">
+              Исследования динамической молекулярной визуализации
+              для структурной биологии от Leica Microsystems»
+            </p>
+            <img class="news__card-news-form formOpener" src="./images/Icons/Form_arrow.svg">
+          </div>
+
+          <div class="news__card-web">
+            <h4 class="news__card-web-head">Вебинар</h4>
+            <p class="news__card-web-date">17.02.2021</p>
+            <p class="news__card-web-text">
+              Исследования динамической молекулярной визуализации
+              для структурной биологии от Leica Microsystems»
+            </p>
+            <img class="news__card-web-form formOpener" src="./images/Icons/Form_arrow.svg">
+          </div>
+
+          <div class="news__card-news">
+            <h4 class="news__card-news-head">Новость</h4>
+            <p class="news__card-news-name">Инна Новак</p>
+            <p class="news__card-news-date">17.02.2021</p>
+            <p class="news__card-news-text">
+              Исследования динамической молекулярной визуализации
+              для структурной биологии от Leica Microsystems»
+            </p>
+            <img class="news__card-news-form formOpener" src="./images/Icons/Form_arrow.svg">
+          </div>
+
+          <div class="news__card-web">
+            <h4 class="news__card-web-head">Вебинар</h4>
+            <p class="news__card-web-date">17.02.2021</p>
+            <p class="news__card-web-text">
+              Исследования динамической молекулярной визуализации
+              для структурной биологии от Leica Microsystems»
+            </p>
+            <img class="news__card-web-form formOpener" src="./images/Icons/Form_arrow.svg">
+          </div>
+
+          <div class="news__card-news">
+            <h4 class="news__card-news-head">Новость</h4>
+            <p class="news__card-news-name">Инна Новак</p>
+            <p class="news__card-news-date">17.02.2021</p>
+            <p class="news__card-news-text">
+              Исследования динамической молекулярной визуализации
+              для структурной биологии от Leica Microsystems»
+            </p>
+            <img class="news__card-news-form formOpener" src="./images/Icons/Form_arrow.svg">
+          </div>
+          <div class="news__slider-stick"></div>
+        </div>
       </section>
       <section class="form">
         <div class="form__container">
@@ -233,7 +392,7 @@
               type="tel"
               id="phone"
               name="phone"
-              placeholder="Format: 000 123 44 55"
+              placeholder="Telephone"
               required
             />
             <textarea
